replacing authorization in API to users and set SUPER user vs regular user roles.. Did not delete Authorization routes etc. just removed from API Doc.
updated Swagger API DoC decription
